// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots @components/organisms/CheckoutAddress default 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c27 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c15 {
  width: 100%;
  margin-bottom: 1.25rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  position: relative;
  margin-left: -0.25rem;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-right: 1rem;
}

.c16 input[type="checkbox"] {
  display: none;
  position: relative;
  right: -999em;
}

.c16 .checkout_icon {
  color: red;
}

.c16 input:checked + div span {
  background-clip: content-box;
  background-color: #00B0CA;
  border: solid 0.125rem #00B0CA;
}

.c16 input:checked + div span div {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c17 {
  border-radius: 0.125rem;
  border: solid 0.188rem #E4E5ED;
  display: block;
  height: 1.25rem;
  width: 1.25rem;
}

.c17 div {
  display: none;
}

.c17 div svg {
  fill: #fff;
}

.c24 {
  padding-top: 1.4rem;
  margin-bottom: 1.875rem;
}

.c26 {
  top: 100%;
}

.c11 {
  background-color: transparent;
  color: #9194A7;
  left: 0px;
  position: absolute;
  font-size: 0.9rem;
  pointer-events: none;
  top: -1.5rem;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 1px solid #E4E5ED;
  border-radius: 4px;
  color: #E4E5ED;
  outline: none;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
}

.c8:hover {
  color: #E4E5ED;
  border-color: #00B0CA;
}

.c9 {
  position: relative;
  width: 100%;
  padding-right: 0;
  border-radius: 4px;
  background-color: white;
}

.c10 {
  padding: 0.75rem 1rem;
  margin: 0;
  border: none;
  color: #131336;
  width: 100%;
  font-size: 0.9rem;
  outline: none;
  background-color: transparent;
  border-radius: 4px;
}

.c10::-webkit-input-placeholder {
  color: #9194A7;
}

.c10::-moz-placeholder {
  color: #9194A7;
}

.c10:-ms-input-placeholder {
  color: #9194A7;
}

.c10::placeholder {
  color: #9194A7;
}

.c25 {
  fill: #00B0CA;
  position: absolute;
  right: 1rem;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transform-origin: center center;
  -ms-transform-origin: center center;
  transform-origin: center center;
}

.c7 {
  padding-top: 1.4rem;
  margin-bottom: 1rem;
  position: relative;
}

.c12 {
  top: 100%;
}

.c20 {
  width: 100%;
  height: auto;
  border-radius: 1rem;
  overflow: hidden;
  margin-bottom: 1.5rem;
}

.c22 {
  width: 100%;
  height: 21.25rem;
}

.c21 {
  background-color: #E6F6F9;
  font-size: 0.875rem;
  font-weight: 600;
  height: 3rem;
  padding: 1rem;
}

.c14 {
  margin-top: 1rem;
  margin-bottom: 1rem;
  width: 100%;
}

.c14 > div {
  margin-bottom: 0rem;
}

.c14 > div > p {
  margin-left: 2rem;
  margin-top: 0.5rem;
}

.c14 a {
  color: #00B0CA;
}

.c18 {
  margin-top: 2rem;
  width: 100%;
}

.c18 a {
  color: #00B0CA;
}

.c1 {
  width: 100%;
}

.c6 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c6 > div {
  width: calc(50% - 1.875rem / 2);
}

.c13 {
  width: 100%;
}

.c2 {
  padding-top: 1rem;
  width: 100%;
}

.c3 {
  padding-bottom: 0.5rem;
  margin-bottom: 1.5rem;
}

.c4 {
  display: inline-block;
  color: #fff;
  background-color: #0050B5;
  border-radius: 5rem;
  height: 1.9rem;
  padding: 0.4rem;
  text-align: center;
  width: 1.9rem;
}

.c5 {
  font-weight: bolder;
  padding-left: 1rem;
}

.c19 {
  display: none;
}

.c23 {
  display: block;
}

@media (max-width:540px) {
  .c6 > div {
    width: 100%;
  }
}

@media (min-width:720px) {
  .c19 {
    display: block;
  }
}

@media (min-width:720px) {
  .c23 {
    display: none;
  }
}

<div
  className="c0"
>
  <section>
    <form
      action="#"
      className="whatever"
      onReset={[Function]}
      onSubmit={[Function]}
    >
      <div>
        <div
          className="c1"
        >
          <div>
            <div
              className="c2"
            >
              <div
                className="c3"
              >
                <span
                  className="c4"
                >
                  1
                </span>
                <span
                  className="c5"
                >
                  Datos Personales
                </span>
              </div>
              <div
                className="c6"
              >
                <div
                  className="c7"
                >
                  <div
                    className="c8"
                    disabled={false}
                  >
                    <div
                      className="c9"
                    >
                      <input
                        autoComplete="given-name"
                        className="c10"
                        data-cy="addressFormFirstName"
                        disabled={false}
                        name="firstName"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        placeholder="Ejemplo: Juan Perez"
                        value="John"
                      />
                      <label
                        className="c11"
                        disabled={false}
                      >
                        *Nombre completo
                      </label>
                    </div>
                  </div>
                  <div
                    className="c12"
                  />
                </div>
                <div
                  className="c7"
                >
                  <div
                    className="c8"
                    disabled={false}
                  >
                    <div
                      className="c9"
                    >
                      <input
                        autoComplete="documento"
                        className="c10"
                        data-cy="addressFormDNI"
                        disabled={false}
                        inputMode="numeric"
                        maxLength={9}
                        name="documentNumber"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        pattern="[0-9]*"
                        placeholder="Ejemplo: 04123456"
                        type="text"
                        value=""
                      />
                      <label
                        className="c11"
                        disabled={false}
                      >
                        *Número de documento
                      </label>
                    </div>
                  </div>
                  <div
                    className="c12"
                  />
                </div>
              </div>
              <div
                className="c6"
              >
                <div
                  className="c7"
                >
                  <div
                    className="c8"
                    disabled={false}
                  >
                    <div
                      className="c9"
                    >
                      <input
                        autoComplete="email"
                        className="c10"
                        data-cy="addressFormEmail"
                        disabled={false}
                        name="email"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        placeholder="Ejemplo: juan@gmail.com"
                        type="email"
                        value="abc@xyz.com"
                      />
                      <label
                        className="c11"
                        disabled={false}
                      >
                        *Correo electrónico
                      </label>
                    </div>
                  </div>
                  <div
                    className="c12"
                  />
                </div>
                <div
                  className="c7"
                >
                  <div
                    className="c8"
                    disabled={false}
                  >
                    <div
                      className="c9"
                    >
                      <input
                        autoComplete="tel"
                        className="c10"
                        data-cy="addressFormPhone"
                        disabled={false}
                        maxLength={9}
                        name="phone"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        pattern="\\\\d*"
                        placeholder="Ejemplo: 912345678"
                        type="tel"
                        value="+51958451245"
                      />
                      <label
                        className="c11"
                        disabled={false}
                      >
                        *Número de celular
                      </label>
                    </div>
                  </div>
                  <div
                    className="c12"
                  />
                </div>
              </div>
              <div
                className="c13"
              >
                <div
                  className="c14"
                >
                  <div
                    className="c15"
                  >
                    <label
                      className="c16"
                      onClick={[Function]}
                    >
                      <input
                        checked={false}
                        data-cy="addressFormTermsAndConditions"
                        name="termsAndConditions"
                        readOnly={true}
                        tabIndex={-1}
                        type="checkbox"
                      />
                      <div
                        onKeyDown={[Function]}
                        tabIndex={0}
                      >
                        <span
                          className="c17"
                        >
                          <div
                            className="checkout_icon"
                          />
                        </span>
                      </div>
                    </label>
                    <label
                      htmlFor=""
                    >
                      *Estoy de acuerdo con las
                      <a
                        href="https://saleor-frontend-storage.s3.us-east-2.amazonaws.com/legal/farmacia-politicas-privacidad.pdf"
                        target="_blank"
                      >
                         
                        Políticas de privacidad
                         
                      </a>
                       
                      y
                      <a
                        href="https://saleor-frontend-storage.s3.us-east-2.amazonaws.com/legal/farmacia-terminos-condiciones.pdf"
                        target="_blank"
                      >
                         
                        Términos y condiciones
                         
                      </a>
                    </label>
                  </div>
                </div>
              </div>
              <div
                className="c13"
              >
                <div
                  className="c18"
                >
                  <div
                    className="c15"
                  >
                    <label
                      className="c16"
                      onClick={[Function]}
                    >
                      <input
                        checked={false}
                        data-cy="checkoutPaymentPromoCodeCheckbox"
                        name="dataTreatmentPolicy"
                        readOnly={true}
                        tabIndex={-1}
                        type="checkbox"
                      />
                      <div
                        onKeyDown={[Function]}
                        tabIndex={0}
                      >
                        <span
                          className="c17"
                        >
                          <div
                            className="checkout_icon"
                          />
                        </span>
                      </div>
                    </label>
                    <label
                      htmlFor=""
                    >
                       
                      Acepto el tratamiento para
                      <a
                        href="https://saleor-frontend-storage.s3.us-east-2.amazonaws.com/legal/farmacia-fines-adicionales.pdf"
                        target="_blank"
                      >
                         
                        Fines adicionales
                         
                      </a>
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="c2"
            >
              <div
                className="c3"
              >
                <span
                  className="c4"
                >
                  2
                </span>
                <span
                  className="c5"
                >
                  Dirección de entrega
                </span>
              </div>
              <div
                className="c6"
              >
                <div
                  className="c7"
                >
                  <div
                    className="c8"
                    disabled={false}
                  >
                    <div
                      className="c9"
                    >
                      <input
                        className="c10"
                        data-cy="addressAutocomplete"
                        disabled={false}
                        name="streetAddress1"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        placeholder="Ejemplo: Av.arenales 213"
                        value="St Street"
                      />
                      <label
                        className="c11"
                        disabled={false}
                      >
                        *Dirección
                      </label>
                    </div>
                  </div>
                  <div
                    className="c12"
                  />
                </div>
                <div
                  className="c19"
                >
                  <div
                    className="c7"
                  >
                    <div
                      className="c8"
                      disabled={false}
                    >
                      <div
                        className="c9"
                      >
                        <input
                          autoComplete="address-line2"
                          className="c10"
                          data-cy="addressFormStreetAddress2"
                          disabled={false}
                          name="streetAddress2"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          placeholder="Ejemplo: Edificio, apartamento"
                          value="Second"
                        />
                        <label
                          className="c11"
                          disabled={false}
                        >
                          Referencia
                        </label>
                      </div>
                    </div>
                    <div
                      className="c12"
                    />
                  </div>
                </div>
              </div>
              <div
                className="c20"
              >
                <div
                  className="c21"
                >
                  Puedes mover tu ubicación en el mapa
                </div>
                <div
                  className="c22"
                />
              </div>
              <div
                className="c6"
              >
                <div
                  className="c23"
                >
                  <div
                    className="c7"
                  >
                    <div
                      className="c8"
                      disabled={false}
                    >
                      <div
                        className="c9"
                      >
                        <input
                          autoComplete="address-line2"
                          className="c10"
                          data-cy="addressFormStreetAddress2"
                          disabled={false}
                          name="streetAddress2"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          placeholder="Ejemplo: Edificio, apartamento"
                          value="Second"
                        />
                        <label
                          className="c11"
                          disabled={false}
                        >
                          Referencia
                        </label>
                      </div>
                    </div>
                    <div
                      className="c12"
                    />
                  </div>
                </div>
                <div
                  className="c24"
                >
                  <div
                    className="css-1pcexqc-container control"
                    onKeyDown={[Function]}
                  >
                    <div
                      className="css-d1vkk-control"
                      onMouseDown={[Function]}
                      onTouchEnd={[Function]}
                    >
                      <div
                        className="css-tntsk8"
                      >
                        <div
                          className="css-dvua67-singleValue"
                        >
                          San Isidro
                        </div>
                        <div
                          className="css-1g6gooi"
                        >
                          <div
                            className=""
                            style={
                              Object {
                                "display": "inline-block",
                              }
                            }
                          >
                            <input
                              aria-autocomplete="list"
                              autoCapitalize="none"
                              autoComplete="off"
                              autoCorrect="off"
                              data-cy="addressFormCity"
                              disabled={false}
                              id="react-select-10-input"
                              name="city"
                              onBlur={[Function]}
                              onChange={[Function]}
                              onFocus={[Function]}
                              placeholder=""
                              spellCheck="false"
                              style={
                                Object {
                                  "background": 0,
                                  "border": 0,
                                  "boxSizing": "content-box",
                                  "color": "inherit",
                                  "fontSize": "inherit",
                                  "label": "input",
                                  "opacity": 1,
                                  "outline": 0,
                                  "padding": 0,
                                  "width": "1px",
                                }
                              }
                              tabIndex="0"
                              type="text"
                              value=""
                            />
                            <div
                              style={
                                Object {
                                  "height": 0,
                                  "left": 0,
                                  "overflow": "scroll",
                                  "position": "absolute",
                                  "top": 0,
                                  "visibility": "hidden",
                                  "whiteSpace": "pre",
                                }
                              }
                            >
                              
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        className="c25"
                        rotate="false"
                      >
                        <svg
                          height={10}
                          viewBox="0 0 32 32"
                          width={10}
                        >
                          <path
                            d="M16 29.856l-15.999-27.712h31.999l-15.999 27.712z"
                            fill="inherit"
                          />
                        </svg>
                      </div>
                    </div>
                    <label
                      className="c11"
                      disabled={false}
                    >
                      *Distrito
                    </label>
                  </div>
                  <div
                    className="c26"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </section>
  <div
    className="c27"
  />
</div>
`;

exports[`Storyshots @components/organisms/CheckoutAddress with addresses 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c27 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c15 {
  width: 100%;
  margin-bottom: 1.25rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  position: relative;
  margin-left: -0.25rem;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-right: 1rem;
}

.c16 input[type="checkbox"] {
  display: none;
  position: relative;
  right: -999em;
}

.c16 .checkout_icon {
  color: red;
}

.c16 input:checked + div span {
  background-clip: content-box;
  background-color: #00B0CA;
  border: solid 0.125rem #00B0CA;
}

.c16 input:checked + div span div {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c17 {
  border-radius: 0.125rem;
  border: solid 0.188rem #E4E5ED;
  display: block;
  height: 1.25rem;
  width: 1.25rem;
}

.c17 div {
  display: none;
}

.c17 div svg {
  fill: #fff;
}

.c24 {
  padding-top: 1.4rem;
  margin-bottom: 1.875rem;
}

.c26 {
  top: 100%;
}

.c11 {
  background-color: transparent;
  color: #9194A7;
  left: 0px;
  position: absolute;
  font-size: 0.9rem;
  pointer-events: none;
  top: -1.5rem;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 1px solid #E4E5ED;
  border-radius: 4px;
  color: #E4E5ED;
  outline: none;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
}

.c8:hover {
  color: #E4E5ED;
  border-color: #00B0CA;
}

.c9 {
  position: relative;
  width: 100%;
  padding-right: 0;
  border-radius: 4px;
  background-color: white;
}

.c10 {
  padding: 0.75rem 1rem;
  margin: 0;
  border: none;
  color: #131336;
  width: 100%;
  font-size: 0.9rem;
  outline: none;
  background-color: transparent;
  border-radius: 4px;
}

.c10::-webkit-input-placeholder {
  color: #9194A7;
}

.c10::-moz-placeholder {
  color: #9194A7;
}

.c10:-ms-input-placeholder {
  color: #9194A7;
}

.c10::placeholder {
  color: #9194A7;
}

.c25 {
  fill: #00B0CA;
  position: absolute;
  right: 1rem;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transform-origin: center center;
  -ms-transform-origin: center center;
  transform-origin: center center;
}

.c7 {
  padding-top: 1.4rem;
  margin-bottom: 1rem;
  position: relative;
}

.c12 {
  top: 100%;
}

.c20 {
  width: 100%;
  height: auto;
  border-radius: 1rem;
  overflow: hidden;
  margin-bottom: 1.5rem;
}

.c22 {
  width: 100%;
  height: 21.25rem;
}

.c21 {
  background-color: #E6F6F9;
  font-size: 0.875rem;
  font-weight: 600;
  height: 3rem;
  padding: 1rem;
}

.c14 {
  margin-top: 1rem;
  margin-bottom: 1rem;
  width: 100%;
}

.c14 > div {
  margin-bottom: 0rem;
}

.c14 > div > p {
  margin-left: 2rem;
  margin-top: 0.5rem;
}

.c14 a {
  color: #00B0CA;
}

.c18 {
  margin-top: 2rem;
  width: 100%;
}

.c18 a {
  color: #00B0CA;
}

.c1 {
  width: 100%;
}

.c6 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c6 > div {
  width: calc(50% - 1.875rem / 2);
}

.c13 {
  width: 100%;
}

.c2 {
  padding-top: 1rem;
  width: 100%;
}

.c3 {
  padding-bottom: 0.5rem;
  margin-bottom: 1.5rem;
}

.c4 {
  display: inline-block;
  color: #fff;
  background-color: #0050B5;
  border-radius: 5rem;
  height: 1.9rem;
  padding: 0.4rem;
  text-align: center;
  width: 1.9rem;
}

.c5 {
  font-weight: bolder;
  padding-left: 1rem;
}

.c19 {
  display: none;
}

.c23 {
  display: block;
}

@media (max-width:540px) {
  .c6 > div {
    width: 100%;
  }
}

@media (min-width:720px) {
  .c19 {
    display: block;
  }
}

@media (min-width:720px) {
  .c23 {
    display: none;
  }
}

<div
  className="c0"
>
  <section>
    <form
      action="#"
      className="whatever"
      onReset={[Function]}
      onSubmit={[Function]}
    >
      <div>
        <div
          className="c1"
        >
          <div>
            <div
              className="c2"
            >
              <div
                className="c3"
              >
                <span
                  className="c4"
                >
                  1
                </span>
                <span
                  className="c5"
                >
                  Datos Personales
                </span>
              </div>
              <div
                className="c6"
              >
                <div
                  className="c7"
                >
                  <div
                    className="c8"
                    disabled={false}
                  >
                    <div
                      className="c9"
                    >
                      <input
                        autoComplete="given-name"
                        className="c10"
                        data-cy="addressFormFirstName"
                        disabled={false}
                        name="firstName"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        placeholder="Ejemplo: Juan Perez"
                        value=""
                      />
                      <label
                        className="c11"
                        disabled={false}
                      >
                        *Nombre completo
                      </label>
                    </div>
                  </div>
                  <div
                    className="c12"
                  />
                </div>
                <div
                  className="c7"
                >
                  <div
                    className="c8"
                    disabled={false}
                  >
                    <div
                      className="c9"
                    >
                      <input
                        autoComplete="documento"
                        className="c10"
                        data-cy="addressFormDNI"
                        disabled={false}
                        inputMode="numeric"
                        maxLength={9}
                        name="documentNumber"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        pattern="[0-9]*"
                        placeholder="Ejemplo: 04123456"
                        type="text"
                        value=""
                      />
                      <label
                        className="c11"
                        disabled={false}
                      >
                        *Número de documento
                      </label>
                    </div>
                  </div>
                  <div
                    className="c12"
                  />
                </div>
              </div>
              <div
                className="c6"
              >
                <div
                  className="c7"
                >
                  <div
                    className="c8"
                    disabled={false}
                  >
                    <div
                      className="c9"
                    >
                      <input
                        autoComplete="email"
                        className="c10"
                        data-cy="addressFormEmail"
                        disabled={false}
                        name="email"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        placeholder="Ejemplo: juan@gmail.com"
                        type="email"
                        value=""
                      />
                      <label
                        className="c11"
                        disabled={false}
                      >
                        *Correo electrónico
                      </label>
                    </div>
                  </div>
                  <div
                    className="c12"
                  />
                </div>
                <div
                  className="c7"
                >
                  <div
                    className="c8"
                    disabled={false}
                  >
                    <div
                      className="c9"
                    >
                      <input
                        autoComplete="tel"
                        className="c10"
                        data-cy="addressFormPhone"
                        disabled={false}
                        maxLength={9}
                        name="phone"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        pattern="\\\\d*"
                        placeholder="Ejemplo: 912345678"
                        type="tel"
                        value=""
                      />
                      <label
                        className="c11"
                        disabled={false}
                      >
                        *Número de celular
                      </label>
                    </div>
                  </div>
                  <div
                    className="c12"
                  />
                </div>
              </div>
              <div
                className="c13"
              >
                <div
                  className="c14"
                >
                  <div
                    className="c15"
                  >
                    <label
                      className="c16"
                      onClick={[Function]}
                    >
                      <input
                        checked={false}
                        data-cy="addressFormTermsAndConditions"
                        name="termsAndConditions"
                        readOnly={true}
                        tabIndex={-1}
                        type="checkbox"
                      />
                      <div
                        onKeyDown={[Function]}
                        tabIndex={0}
                      >
                        <span
                          className="c17"
                        >
                          <div
                            className="checkout_icon"
                          />
                        </span>
                      </div>
                    </label>
                    <label
                      htmlFor=""
                    >
                      *Estoy de acuerdo con las
                      <a
                        href="https://saleor-frontend-storage.s3.us-east-2.amazonaws.com/legal/farmacia-politicas-privacidad.pdf"
                        target="_blank"
                      >
                         
                        Políticas de privacidad
                         
                      </a>
                       
                      y
                      <a
                        href="https://saleor-frontend-storage.s3.us-east-2.amazonaws.com/legal/farmacia-terminos-condiciones.pdf"
                        target="_blank"
                      >
                         
                        Términos y condiciones
                         
                      </a>
                    </label>
                  </div>
                </div>
              </div>
              <div
                className="c13"
              >
                <div
                  className="c18"
                >
                  <div
                    className="c15"
                  >
                    <label
                      className="c16"
                      onClick={[Function]}
                    >
                      <input
                        checked={false}
                        data-cy="checkoutPaymentPromoCodeCheckbox"
                        name="dataTreatmentPolicy"
                        readOnly={true}
                        tabIndex={-1}
                        type="checkbox"
                      />
                      <div
                        onKeyDown={[Function]}
                        tabIndex={0}
                      >
                        <span
                          className="c17"
                        >
                          <div
                            className="checkout_icon"
                          />
                        </span>
                      </div>
                    </label>
                    <label
                      htmlFor=""
                    >
                       
                      Acepto el tratamiento para
                      <a
                        href="https://saleor-frontend-storage.s3.us-east-2.amazonaws.com/legal/farmacia-fines-adicionales.pdf"
                        target="_blank"
                      >
                         
                        Fines adicionales
                         
                      </a>
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="c2"
            >
              <div
                className="c3"
              >
                <span
                  className="c4"
                >
                  2
                </span>
                <span
                  className="c5"
                >
                  Dirección de entrega
                </span>
              </div>
              <div
                className="c6"
              >
                <div
                  className="c7"
                >
                  <div
                    className="c8"
                    disabled={false}
                  >
                    <div
                      className="c9"
                    >
                      <input
                        className="c10"
                        data-cy="addressAutocomplete"
                        disabled={false}
                        name="streetAddress1"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        placeholder="Ejemplo: Av.arenales 213"
                        value=""
                      />
                      <label
                        className="c11"
                        disabled={false}
                      >
                        *Dirección
                      </label>
                    </div>
                  </div>
                  <div
                    className="c12"
                  />
                </div>
                <div
                  className="c19"
                >
                  <div
                    className="c7"
                  >
                    <div
                      className="c8"
                      disabled={false}
                    >
                      <div
                        className="c9"
                      >
                        <input
                          autoComplete="address-line2"
                          className="c10"
                          data-cy="addressFormStreetAddress2"
                          disabled={false}
                          name="streetAddress2"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          placeholder="Ejemplo: Edificio, apartamento"
                          value=""
                        />
                        <label
                          className="c11"
                          disabled={false}
                        >
                          Referencia
                        </label>
                      </div>
                    </div>
                    <div
                      className="c12"
                    />
                  </div>
                </div>
              </div>
              <div
                className="c20"
              >
                <div
                  className="c21"
                >
                  Puedes mover tu ubicación en el mapa
                </div>
                <div
                  className="c22"
                />
              </div>
              <div
                className="c6"
              >
                <div
                  className="c23"
                >
                  <div
                    className="c7"
                  >
                    <div
                      className="c8"
                      disabled={false}
                    >
                      <div
                        className="c9"
                      >
                        <input
                          autoComplete="address-line2"
                          className="c10"
                          data-cy="addressFormStreetAddress2"
                          disabled={false}
                          name="streetAddress2"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          placeholder="Ejemplo: Edificio, apartamento"
                          value=""
                        />
                        <label
                          className="c11"
                          disabled={false}
                        >
                          Referencia
                        </label>
                      </div>
                    </div>
                    <div
                      className="c12"
                    />
                  </div>
                </div>
                <div
                  className="c24"
                >
                  <div
                    className="css-1pcexqc-container control"
                    onKeyDown={[Function]}
                  >
                    <div
                      className="css-d1vkk-control"
                      onMouseDown={[Function]}
                      onTouchEnd={[Function]}
                    >
                      <div
                        className="css-tntsk8"
                      >
                        <div
                          className="css-151xaom-placeholder"
                        >
                          
                        </div>
                        <div
                          className="css-1g6gooi"
                        >
                          <div
                            className=""
                            style={
                              Object {
                                "display": "inline-block",
                              }
                            }
                          >
                            <input
                              aria-autocomplete="list"
                              autoCapitalize="none"
                              autoComplete="off"
                              autoCorrect="off"
                              data-cy="addressFormCity"
                              disabled={false}
                              id="react-select-11-input"
                              name="city"
                              onBlur={[Function]}
                              onChange={[Function]}
                              onFocus={[Function]}
                              placeholder="Selecciona tu distrito"
                              spellCheck="false"
                              style={
                                Object {
                                  "background": 0,
                                  "border": 0,
                                  "boxSizing": "content-box",
                                  "color": "inherit",
                                  "fontSize": "inherit",
                                  "label": "input",
                                  "opacity": 1,
                                  "outline": 0,
                                  "padding": 0,
                                  "width": "1px",
                                }
                              }
                              tabIndex="0"
                              type="text"
                              value=""
                            />
                            <div
                              style={
                                Object {
                                  "height": 0,
                                  "left": 0,
                                  "overflow": "scroll",
                                  "position": "absolute",
                                  "top": 0,
                                  "visibility": "hidden",
                                  "whiteSpace": "pre",
                                }
                              }
                            >
                              
                            </div>
                            <div
                              style={
                                Object {
                                  "height": 0,
                                  "left": 0,
                                  "overflow": "scroll",
                                  "position": "absolute",
                                  "top": 0,
                                  "visibility": "hidden",
                                  "whiteSpace": "pre",
                                }
                              }
                            >
                              Selecciona tu distrito
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        className="c25"
                        rotate="false"
                      >
                        <svg
                          height={10}
                          viewBox="0 0 32 32"
                          width={10}
                        >
                          <path
                            d="M16 29.856l-15.999-27.712h31.999l-15.999 27.712z"
                            fill="inherit"
                          />
                        </svg>
                      </div>
                    </div>
                    <label
                      className="c11"
                      disabled={false}
                    >
                      *Distrito
                    </label>
                  </div>
                  <div
                    className="c26"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </section>
  <div
    className="c27"
  />
</div>
`;
